--- a/moduleSources/scripts/ldRigNodes/ui/SSM.ui
+++ b/moduleSources/scripts/ldRigNodes/ui/SSM.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>255</width>
-    <height>255</height>
+    <width>143</width>
+    <height>166</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>255</width>
-    <height>255</height>
+    <width>143</width>
+    <height>166</height>
    </size>
   </property>
   <property name="font">
@@ -26,8 +26,26 @@
    <string extracomment="Space Switch Manager">SSM</string>
   </property>
   <layout class="QVBoxLayout" name="main_layout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <layout class="QGridLayout" name="add_space_switch_grid">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="1" column="1">
       <widget class="QPushButton" name="add_SR">
        <property name="sizePolicy">
